fixed border on bottom of main post, made word break on over flow normal

--- a/react-app/src/components/ReplyCard/replycard.css
+++ b/react-app/src/components/ReplyCard/replycard.css
@@ -46,8 +46,10 @@
 }
 
 .reply-card-content-container {
-    word-break: break-all;
     overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-word;
+    word-break: break-word;
     margin-bottom: 10px;
 }
 
