--- a/react-app/src/components/ReplyModal/replymodal.css
+++ b/react-app/src/components/ReplyModal/replymodal.css
@@ -118,7 +118,9 @@
     padding-bottom: 12px;
     font-size: 1rem;
     overflow-wrap: break-word;
-    word-break: break-all;
+    word-wrap: break-word;
+    -ms-word-break: break-word;
+    word-break: break-word;
 }
 
 .reply-modal-replying-to-text {
